# msdp_device_status

./: 0525_TODO.md  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  TODO.md  bundle.json  design.md  device_status.gni  fiff_of_dev_tlv.diff  getpid.txt  hisysevent.yaml  hisyseventdrague.yaml  interaction_by_softybus.md  ipc_blocklist.txt
etc/drag_icon/: BUILD.gn
frameworks/ets/coop/: BUILD.gn
frameworks/ets/coordination/: BUILD.gn
frameworks/ets/devicestatus/: BUILD.gn
frameworks/ets/metadataBinding/: BUILD.gn
frameworks/ets/motion/: BUILD.gn
frameworks/ets/onscreen/: BUILD.gn
frameworks/ets/spatialAwareness/: BUILD.gn
frameworks/js/napi/: BUILD.gn
frameworks/native/src/: BUILD.gn  boomerang_callback_proxy.cpp  boomerang_callback_stub.cpp  boomerang_manager.cpp  bytrace_adapter.cpp  client.cpp  devicestatus_agent.cpp  devicestatus_callback_proxy.cpp  devicestatus_callback_stub.cpp  devicestatus_client.cpp  devicestatus_srv_proxy.cpp  fd_listener.cpp  on_screen_callback_proxy.cpp  on_screen_callback_stub.cpp  on_screen_manager.cpp  stationary_manager.cpp
intention/adapters/ddp_adapter/: BUILD.gn
intention/adapters/device_profile_adapter/: BUILD.gn
intention/adapters/unittest/: BUILD.gn
intention/boomerang/server/: BUILD.gn
intention/cooperate/plugin/: BUILD.gn
intention/data/: BUILD.gn
intention/data/include/: default_params.h  i_context.h  i_device.h  i_device_manager.h  i_device_observer.h  i_epoll_event_source.h  i_plugin.h  i_timer_manager.h
intention/data/src/: default_params.cpp
intention/ipc/: BUILD.gn
intention/ipc/include/: i_intention.h  intention_proxy.h  intention_stub.h
intention/ipc/sequenceable_types/: BUILD.gn
intention/ipc/socket/: BUILD.gn
intention/ipc/src/: intention_proxy.cpp  intention_stub.cpp
intention/ipc/tunnel/: BUILD.gn  IIntention.idl
intention/services/: BUILD.gn
intention/services/device_manager/: BUILD.gn
intention/services/include/: intention_service.h
intention/services/intention_service/: BUILD.gn
intention/services/src/: intention_service.cpp
intention/services/test/: BUILD.gn
interfaces/innerkits/: BUILD.gn  libdevicestatus_client_map
interfaces/innerkits/include/: boomerang_callback.h  boomerang_callback_proxy.h  boomerang_callback_stub.h  boomerang_data.h  boomerang_manager.h  bytrace_adapter.h  client.h  device_status_if.h  device_status_type.h  devicestatus_agent.h  devicestatus_callback_proxy.h  devicestatus_callback_stub.h  devicestatus_client.h  devicestatus_data_utils.h  devicestatus_srv_proxy.h  fd_listener.h  i_client.h  i_devicestatus_algorithm.h  i_devicestatus_algorithm_callback.h  i_devicestatus_storage.h  i_on_screen_algorithm.h  idevicestatus.h  idevicestatus_algorithm.h  idevicestatus_algorithm_callback.h  idevicestatus_callback.h  idevicestatus_storage.h  iremote_boomerang_callback.h  iremote_dev_sta_callback.h  iremote_on_screen_callback.h  on_screen_callback_proxy.h  on_screen_callback_stub.h  on_screen_data.h  on_screen_manager.h  stationary_callback.h  stationary_data.h  stationary_manager.h
libs/: BUILD.gn
libs/include/: devicestatus_algorithm_manager.h  devicestatus_data_define.h  devicestatus_data_parse.h  devicestatus_msdp_mock.h  devicestatus_msdp_rdb.h  devicestatus_sensor_rdb.h
libs/include/algorithm/: algo_absolute_still.h  algo_base.h  algo_horizontal.h  algo_relative_still.h  algo_vertical.h  device_status_absolute_still.h  device_status_horizontal.h  device_status_vertical.h
libs/include/datahub/: sensor_data_callback.h
libs/interface/: devicestatus_algorithm_manager_interface.h  devicestatus_msdp_interface.h  devicestatus_sensor_interface.h
libs/src/: devicestatus_algorithm_manager.cpp  devicestatus_data_parse.cpp  devicestatus_msdp_mock.cpp  devicestatus_msdp_rdb.cpp  devicestatus_sensor_rdb.cpp
libs/src/algorithm/: algo_absolute_still.cpp  algo_base.cpp  algo_horizontal.cpp  algo_relative_still.cpp  algo_vertical.cpp  device_status_absolute_still.cpp  device_status_horizontal.cpp  device_status_vertical.cpp
libs/src/datahub/: sensor_data_callback.cpp
libs/test/: BUILD.gn
libs/test/unittest/: BUILD.gn
services/: BUILD.gn
services/boomerang/include/: accessibility_manager.h  boomerang_surfacecapture_callback.h
services/boomerang/src/: accessibility_manager.cpp  boomerang_surfacecapture_callback.cpp
services/communication/base/: i_devicestatus.h  idevicestatus.h  msdp_ipc_interface_code.h
services/context/include/: i_context.h  i_delegate_tasks.h  i_device.h  i_device_manager.h  i_device_observer.h  i_drag_manager.h  i_timer_manager.h
services/delegate_task/include/: delegate_tasks.h
services/delegate_task/src/: delegate_tasks.cpp
services/device_manager/include/: device.h  device_manager.h  enumerator.h  i_device_mgr.h  i_input_dev_mgr.h  monitor.h
services/device_manager/src/: device.cpp  device_manager.cpp  enumerator.cpp  monitor.cpp
services/drag_auth/: BUILD.gn
services/drag_auth/include/: drag_auth.h  drag_security_manager.h
services/drag_auth/src/: drag_auth.cpp  drag_security_manager.cpp
services/interaction/across/: BUILD.gn
services/interaction/coordination/: BUILD.gn
services/interaction/drag/: BUILD.gn
services/native/include/: coordination_event_handler.h  devicestatus_callback_proxy.h  devicestatus_callback_stub.h  devicestatus_dump.h  devicestatus_dumper.h  devicestatus_hisysevent.h  devicestatus_manager.h  devicestatus_msdp_client_impl.h  devicestatus_napi_manager.h  devicestatus_service.h  devicestatus_srv_stub.h  i_stream_server.h  i_uds_server.h  stream_server.h  uds_server.h
services/native/src/: coordination_event_handler.cpp  devicestatus_callback_proxy.cpp  devicestatus_callback_stub.cpp  devicestatus_dump.cpp  devicestatus_dumper.cpp  devicestatus_hisysevent.cpp  (+7 more)
services/tools/: drag_data_packer.cpp
test/fuzztest/: BUILD.gn  devicestatus_agent_fuzz_test.cpp  devicestatus_agent_fuzz_test.h
test/unittest/: BUILD.gn  ipc_blocklist.txt
tools/vdev/: BUILD.gn
utils/common/: BUILD.gn  libdevicestatus_util_map
utils/ipc/: BUILD.gn
utils/json_parser/: BUILD.gn
(+1487 files in other folders)
