# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device_status.gni")

group("devicestatus_service_group") {
  deps = []

  if (fusion_rust_enabled) {
    deps += [
      "${device_status_root_path}/rust/ipc/server:fusion_ipc_server_ffi",
      "${device_status_root_path}/rust/modules/coordination/server:fusion_coordination_server_ffi",
      "${device_status_root_path}/rust/modules/drag/server:fusion_drag_server_ffi",
      "${device_status_root_path}/rust/subsystem/distributed_hardware/sys:dm_ffi",
      "${device_status_root_path}/rust/subsystem/input/sys:input_ffi",
    ]
  }
}

group("intention_group") {
  deps = [
    "${device_status_root_path}/intention/data:drag_params",
    "${device_status_root_path}/intention/data:cooperate_params",
    "${device_status_root_path}/intention/ipc:intention_ipc",
    "${device_status_root_path}/intention/plugins/drag:intention_drag",
    "${device_status_root_path}/intention/plugins/cooperate:intention_cooperate",
    "${device_status_root_path}/intention/scheduler/plugin_manager:plugin_manager",
    "${device_status_root_path}/intention/scheduler/task_scheduler:task_scheduler",
    "${device_status_root_path}/intention/scheduler/timer_manager:timer_manager",
    "${device_status_root_path}/intention/services:intention_service",
    "${device_status_root_path}/intention/frameworks/client:intention_client"
  ]
}

group("device_status_tests") {
  testonly = true
  deps = [
    "frameworks/native/interaction/test:interaction_manager_test",
    "services/native/test:devicestatussrv_test",
    "test/fuzztest:device_status_fuzztest",
  ]
}
