# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")

config("devicestatus_private_config") {
  include_dirs = [ "//utils/system/safwk/native/include" ]
}

config("devicestatus_srv_public_config") {
  include_dirs = [
    "include",
    "interface",
    "${device_status_interfaces_path}/innerkits/include",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp/include/",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/",
    "//base/sensors/sensor/interfaces/native/include/",
  ]
}

ohos_shared_library("devicestatus_sensorhdi") {
  sources = [ "src/devicestatus_sensor_rdb.cpp" ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatus_private_config",
  ]

  public_configs = [ ":devicestatus_srv_public_config" ]

  deps = []

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_rdb",
  ]

  part_name = "${device_status_part_name}"
}

ohos_shared_library("devicestatus_msdp") {
  sources = [ "src/devicestatus_msdp_rdb.cpp" ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatus_private_config",
  ]

  public_configs = [ ":devicestatus_srv_public_config" ]

  deps = []

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_rdb",
  ]

  part_name = "${device_status_part_name}"
}
